--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN = "{YOUR_TOKEN}"
-KEY = "com.companyname.mycoolproject"
+TOKEN = "82d954c03927143f3b3ee77000e7bf084b2f6a78"
+KEY = "maorbarshishat_project_key"
